Fix: Update button styles to use transparent background and add text shadow; enhance SVG visibility with drop shadow

--- a/src/app.scss
+++ b/src/app.scss
@@ -197,7 +197,12 @@ button {
   width: 100%;
   font-size: var(--f16);
   border-radius: 0px;
-  background-color: black;
+  /* background-color: black; */
+  background-color: transparent;
+  text-shadow: 
+    1px 1px 2px rgba(0, 0, 0, 0.7),
+    -1px -1px 3px rgba(0, 0, 0, 0.7),
+    2px 2px 3px rgba(0, 0, 0, 0.7);
   max-width: 90%;
   /* margin-right: auto; */
   color: white;
@@ -206,6 +211,13 @@ button {
   border: none;
 }
 
+// Add shadow to svgs inside buttons
+button > svg {
+  filter: drop-shadow(
+    1px 1px 3px rgba(0, 0, 0, 0.9)) 
+    /* drop-shadow(-1px -1px 3px rgba(0, 0, 0, 0.9))  */
+    drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.9));
+}
 
 	button[data-variant="primary"] {
 		/*Unset all effects*/
